--- a/package.json
+++ b/package.json
@@ -9,11 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.5"
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "axios": "^1.7.9",
+    "next": "15.1.5",
+    "next-auth": "^4.24.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.5.1",
+    "react-international-phone": "^4.5.0",
+    "react-phone-input-2": "^2.15.1",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
+    "@types/react": "^19.0.7",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
