--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
+    "html-react-parser": "^5.2.2",
+    "lodash": "^4.17.21",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "react": "^18.2.0",
