--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.0.1",
     "html-react-parser": "^5.2.2",
     "lodash": "^4.17.21",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
