--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.0.1",
     "html-react-parser": "^5.2.2",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
     "lodash": "^4.17.21",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
@@ -24,9 +26,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
+    "react-i18next": "^15.4.0",
     "react-international-phone": "^4.5.0",
     "react-phone-input-2": "^2.15.1",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^19.0.7",
