--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tanstack/react-query": "^4.28.0",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "apexcharts": "^4.4.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.0.1",
@@ -18,10 +19,12 @@
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.7.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
