--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-circular-progressbar": "^2.1.0",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
