--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^4.10.38",
     "react": "^18.2.0",
     "react-apexcharts": "^1.7.0",
     "react-circular-progressbar": "^2.1.0",
@@ -32,6 +33,7 @@
     "react-hot-toast": "^2.5.1",
     "react-i18next": "^15.4.0",
     "react-international-phone": "^4.5.0",
+    "react-pdf": "^9.2.1",
     "react-phone-input-2": "^2.15.1",
     "recharts": "^2.15.0",
     "ua-parser-js": "^2.0.2",
